--- a/layouts/analytics/list.html
+++ b/layouts/analytics/list.html
@@ -1,15 +1,11 @@
 {{ define "main"}}
-<script
-  defer
-  src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
-></script>
 
 <div
   class="analyticsPage mx-auto overflow-hidden w-full bg-[#090619] text-white pb-0 flex flex-col items-center"
 >
   <!-- Hero Section -->
   <div
-    class="w-full h-[700px] max-sm:h-[350px] flex flex-col justify-evenly relative bg-cover bg-center"
+    class="w-full h-[800px] max-sm:h-[350px] flex flex-col justify-evenly relative bg-cover bg-center"
     style="background-image: url('/images/analytic.png');"
   >
     <div
@@ -62,7 +58,7 @@
         </div>
 
         <div
-          class="rightBlank w-[200px] h-[5px]"
+          class="rightBlank w-[200px] h-[2px]"
           style="background: linear-gradient(to bottom, #00aa00, #539afd);"
         ></div>
         <ul class="list-disc list-inside pl-4">
@@ -78,7 +74,7 @@
     </div>
     <div class="image-feature flex max-sm:hidden">
       <div
-        class="rightBlank w-[5px] h-[600px] max-sm:hidden"
+        class="rightBlank w-[2px] h-[600px] max-sm:hidden"
         style="background: linear-gradient(to bottom, #00aa00, #539afd);"
       ></div>
       <div class="flex justify-center items-center content-center">
@@ -94,7 +90,7 @@
   <!-- Functional Overview Section -->
 
   <div
-    class="min-h-screen w-full from-[#060218] text-white flex max-sm:flex-col justify-between p-20 max-sm:px-6 max-sm:grid-cols-1 bg-cover bg-center"
+    class="min-h-screen w-11/12 max-sm:w-full from-[#060218] text-white flex max-sm:flex-col justify-between p-20 max-sm:px-6 max-sm:grid-cols-1 bg-cover bg-center"
   >
     <div class="flex justify-center items-center max-sm:mb-20">
       <div class="w-[700px] max-sm:w-auto flex flex-col gap-8 max-sm:gap-4">
@@ -110,14 +106,14 @@
           paramount for accuracy and effectiveness.
         </h3>
         <div
-          class="rightBlank w-[300px] h-[5px]"
+          class="rightBlank w-[300px] h-[2px]"
           style="background: linear-gradient(to bottom, #00aa00, #539afd);"
         ></div>
         <h3 class="text-5xl max-sm:text-4xl font-semibold">
           Technological foundations include:
         </h3>
         <div
-          class="rightBlank w-[250px] h-[5px]"
+          class="rightBlank w-[250px] h-[2px]"
           style="background: linear-gradient(to bottom, #00aa00, #539afd);"
         ></div>
         <ul class="list-disc list-inside pl-4">
@@ -133,14 +129,14 @@
           exchange providers, and both buy and sell side market participants.
         </h3>
         <div
-          class="rightBlank w-[200px] h-[5px]"
+          class="rightBlank w-[200px] h-[2px]"
           style="background: linear-gradient(to bottom, #00aa00, #539afd);"
         ></div>
         <h3 class="text-5xl max-sm:text-4xl font-semibold">
           Specifically:
         </h3>
         <div
-          class="rightBlank w-[150px] h-[5px]"
+          class="rightBlank w-[150px] h-[2px]"
           style="background: linear-gradient(to bottom, #00aa00, #539afd);"
         ></div>
         <ul class="list-disc list-inside pl-4">
