--- a/layouts/matching-engine/list.html
+++ b/layouts/matching-engine/list.html
@@ -148,26 +148,27 @@
     <div
       class="w-11/12 md:w-3/4 mt-[300px] max-sm:mt-[100px] pr-20 max-sm:pr-0 max-sm:px-5"
     >
-      <h2 class="text-5xl max-sm:text-xl font-semibold mb-6">
-        Why is a High-Performing Exchange<br />Matching Engine Important?
+      <h2 class="text-5xl max-sm:text-2xl font-semibold mb-6">
+        Why is a High-Performing Exchange<br class="max-sm:hidden" />Matching
+        Engine Important?
       </h2>
-      <p
-        class="text-lg max-sm:text-base leading-relaxed mb-6 mt-20 max-sm:mt-10"
-      >
+      <p class="text-lg max-sm:text-sm leading-relaxed mb-6 mt-20 max-sm:mt-10">
         A high-performing exchange matching engine is critical to the success of
-        any cryptocurrency exchange.<br />The speed, reliability, and
-        scalability of the matching engine are directly linked to the user
-        experience<br />and can have a significant impact on the success of the
-        exchange. In a market that is constantly evolving,<br />exchanges need
-        to be able to handle an increasing number of transactions to keep up
-        with demand.<br />Any delay or latency in executing trades can cause
-        significant losses to traders and<br />negatively impact the reputation
-        of the exchange.
+        any cryptocurrency exchange.<br class="max-sm:hidden" />The speed,
+        reliability, and scalability of the matching engine are directly linked
+        to the user experience<br class="max-sm:hidden" />and can have a
+        significant impact on the success of the exchange. In a market that is
+        constantly evolving,<br class="max-sm:hidden" />exchanges need to be
+        able to handle an increasing number of transactions to keep up with
+        demand.<br class="max-sm:hidden" />Any delay or latency in executing
+        trades can cause significant losses to traders and<br
+          class="max-sm:hidden"
+        />negatively impact the reputation of the exchange.
       </p>
     </div>
   </section>
 
-  <section class="flex flex-col py-20">
+  <section class="flex flex-col py-20 max-sm:mt-10">
     <div class="relative">
       <div class="absolute">
         <img src="/images/Ellipse.svg" class="opacity-40" />
