--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -281,7 +281,7 @@
               <a href="/order_management_system" class="hover:text-gray-700"
                 >OMS</a
               >
-              <a href="/algorithmic-platform" class="hover:text-gray-700">Algorithmic Platform</a>
+              <a href="/algorithmic-platform" class="hover:text-gray-700">Al`gorithmic Platform</a>
               <a href="/algorithmic-suite" class="hover:text-gray-700">Algorithmic Suie</a>
               <a href="/matching-engine" class="hover:text-gray-700">Matching Engine</a>
             </div>
