--- a/layouts/algorithmic-suite/list.html
+++ b/layouts/algorithmic-suite/list.html
@@ -14,7 +14,9 @@
     <div
       class="flex justify-center items-center max-sm:items-start max-sm:justify-center"
     >
-      <div class="flex flex-col text-right max-sm:text-left mr-40">
+      <div
+        class="flex flex-col text-right max-sm:text-left mr-40 max-sm:mr-0 max-sm:px-6"
+      >
         <span class="text-lg"
           >“ The best way to predict the future is to create it. ”</span
         >
