Header Fixed And Algoteq added to the chip

--- a/layouts/matching-engine/list.html
+++ b/layouts/matching-engine/list.html
@@ -41,7 +41,7 @@
     class="w-full max-sm:w-10/12 py-40 px-6 max-sm:px-0 grid grid-cols-2 max-sm:grid-cols-1 max-sm:py-20"
   >
     <div class="max-sm:mb-10">
-      <img src="/images/chip.png" class="w-3/4" />
+      <img src="/images/chip-2.png" class="w-3/4" />
     </div>
     <div class="md:w-3/4 mx-auto">
       <h2 class="text-4xl font-semibold mb-6">
