--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -45,7 +45,7 @@
             <a
               href="https://algoteq.com/wp-content/uploads/2024/03/Algoteq-Environmental-Impact-Policy.pdf"
               target="_blank"
-              >Products & Services</a
+              >Environmental Impact Policy</a
             >
           </li>
         </ul>
