--- a/layouts/algorithmic-platform/list.html
+++ b/layouts/algorithmic-platform/list.html
@@ -179,6 +179,8 @@
   <!-- Platform Overview -->
   <section
     class="w-full flex flex-col justify-evenly text-center text-white p-8 md:p-20 overflow-hidden min-h-[700px]"
+    x-data="{ shown: false }"
+    x-intersect="shown = true"
   >
     <div class="relative">
       <div class="absolute inset-0">
@@ -190,7 +192,14 @@
       </div>
     </div>
 
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-10 md:gap-20 z-20">
+    <div
+      class="grid grid-cols-1 md:grid-cols-3 gap-10 md:gap-20 z-20"
+      class="w-auto md:w-3/4 max-sm:w-11/12 mx-auto"
+      x-show="shown"
+      x-transition:enter="transition ease-out duration-[2000ms] delay-100"
+      x-transition:enter-start="opacity-0 translate-y-5"
+      x-transition:enter-end="opacity-100 translate-y-0"
+    >
       <div
         class="flex flex-col justify-center items-center w-full max-w-md mx-auto h-auto md:h-[500px] p-4 md:p-0"
       >
