--- a/layouts/analytics/list.html
+++ b/layouts/analytics/list.html
@@ -2,6 +2,8 @@
 
 <div
   class="analyticsPage mx-auto overflow-hidden w-full bg-[#090619] text-white pb-0 flex flex-col items-center"
+  x-data="{ visible: false }"
+  x-init="setTimeout(() => visible = true, 200)"
 >
   <!-- Hero Section -->
   <div
@@ -33,8 +35,16 @@
   <!-- Introduction Section -->
   <div
     class="w-full grid grid-cols-2 max-sm:flex bg-white text-black text-left py-20 max-sm:py-10"
+    x-data="{ shown: false }"
+    x-intersect="shown = true"
   >
-    <div class="w-auto md:w-3/4 max-sm:w-11/12 mx-auto">
+    <div
+      class="w-auto md:w-3/4 max-sm:w-11/12 mx-auto"
+      x-show="shown"
+      x-transition:enter="transition ease-out duration-[2000ms] delay-100"
+      x-transition:enter-start="opacity-0 translate-y-12"
+      x-transition:enter-end="opacity-100 translate-y-0"
+    >
       <h2 class="text-5xl max-sm:text-4xl font-semibold mb-6">
         Data-driven Innovation in Financial Markets
       </h2>
@@ -77,7 +87,13 @@
         class="rightBlank w-[2px] h-[600px] max-sm:hidden"
         style="background: linear-gradient(to bottom, #00aa00, #539afd);"
       ></div>
-      <div class="flex justify-center items-center content-center">
+      <div
+        class="flex justify-center items-center content-center"
+        x-show="shown"
+        x-transition:enter="transition ease-out duration-[2000ms] delay-100"
+        x-transition:enter-start="opacity-0 translate-x-12"
+        x-transition:enter-end="opacity-100 translate-y-0"
+      >
         <img
           src="/images/imac-screen.png"
           class="object-contain justify-center h-[600px] w-auto"
