--- a/layouts/matching-engine/list.html
+++ b/layouts/matching-engine/list.html
@@ -6,8 +6,16 @@
   <div
     class="w-full h-[700px] max-sm:h-[350px] flex flex-col justify-evenly bg-cover bg-center"
     style="background-image: url('/images/matching-engine-hero.png');"
+    x-data="{ shown: false }"
+    x-intersect="shown = true"
   >
-    <div class="ml-20 max-sm:ml-5">
+    <div
+      class="ml-20 max-sm:ml-5"
+      x-show="shown"
+      x-transition:enter="transition ease-out duration-[2000ms] delay-100"
+      x-transition:enter-start="opacity-0 translate-y-12"
+      x-transition:enter-end="opacity-100 translate-y-0"
+    >
       <h1 class="text-[5rem] max-sm:text-5xl leading-tight">
         Matching Engine
       </h1>
@@ -22,8 +30,18 @@
   </div>
 
   <div class="w-3/4 flex justify-center items-center text-center mt-20">
-    <div class="md:w-3/4 mx-auto">
-      <p class="text-lg leading-relaxed mb-6">
+    <div
+      class="md:w-3/4 mx-auto"
+      x-data="{ shown: false }"
+      x-intersect="shown = true"
+    >
+      <p
+        class="text-lg leading-relaxed mb-6"
+        x-show="shown"
+        x-transition:enter="transition ease-out duration-[2000ms] delay-100"
+        x-transition:enter-start="opacity-0 translate-y-12"
+        x-transition:enter-end="opacity-100 translate-y-0"
+      >
         As the world of institutional cryptocurrency trading continues to grow
         and evolve, it becomes increasingly important for exchanges to have a
         high-performing and reliable matching engine. At the core of any
@@ -40,10 +58,27 @@
   <section
     class="w-full max-sm:w-10/12 py-40 px-6 max-sm:px-0 grid grid-cols-2 max-sm:grid-cols-1 max-sm:py-20"
   >
-    <div class="max-sm:mb-10">
-      <img src="/images/chip-2.png" class="w-3/4" />
+    <div
+      class="max-sm:mb-10"
+      x-data="{ shown: false }"
+      x-intersect="shown = true"
+    >
+      <img
+        src="/images/chip-2.png"
+        class="w-3/4"
+        x-show="shown"
+        x-transition:enter="transition ease-out duration-[2000ms] delay-100"
+        x-transition:enter-start="opacity-0 -translate-x-12"
+        x-transition:enter-end="opacity-100 translate-y-0"
+      />
     </div>
-    <div class="md:w-3/4 mx-auto">
+    <div
+      class="md:w-3/4 mx-auto"
+      x-show="shown"
+      x-transition:enter="transition ease-out duration-[2000ms] delay-100"
+      x-transition:enter-start="opacity-0 translate-y-12"
+      x-transition:enter-end="opacity-100 translate-y-0"
+    >
       <h2 class="text-4xl font-semibold mb-6">
         What is an Exchange Matching Engine?
       </h2>
@@ -126,12 +161,22 @@
     </div>
 
     <!-- Right Image -->
-    <div class="image-feature flex max-sm:hidden">
+    <div
+      class="image-feature flex max-sm:hidden"
+      x-data="{ shown: false }"
+      x-intersect="shown = true"
+    >
       <div
         class="rightBlank w-[5px] h-[600px] max-sm:hidden"
         style="background: linear-gradient(to bottom, #00aa00, #539afd);"
       ></div>
-      <div class="flex justify-center items-center content-center">
+      <div
+        class="flex justify-center items-center content-center"
+        x-show="shown"
+        x-transition:enter="transition ease-out duration-[2000ms] delay-100"
+        x-transition:enter-start="opacity-0 translate-x-12"
+        x-transition:enter-end="opacity-100 translate-y-0"
+      >
         <img
           src="/images/imac-screen.png"
           class="object-contain justify-center h-[600px] w-auto"
@@ -147,12 +192,26 @@
   >
     <div
       class="w-11/12 md:w-3/4 mt-[300px] max-sm:mt-[100px] pr-20 max-sm:pr-0 max-sm:px-5"
+      x-data="{ shown: false }"
+      x-intersect="shown = true"
     >
-      <h2 class="text-5xl max-sm:text-2xl font-semibold mb-6">
+      <h2
+        class="text-5xl max-sm:text-2xl font-semibold mb-6"
+        x-show="shown"
+        x-transition:enter="transition ease-out duration-[3000ms] delay-100"
+        x-transition:enter-start="opacity-0 translate-y-0"
+        x-transition:enter-end="opacity-100 translate-y-0"
+      >
         Why is a High-Performing Exchange<br class="max-sm:hidden" />Matching
         Engine Important?
       </h2>
-      <p class="text-lg max-sm:text-sm leading-relaxed mb-6 mt-20 max-sm:mt-10">
+      <p
+        class="text-lg max-sm:text-sm leading-relaxed mb-6 mt-20 max-sm:mt-10"
+        x-show="shown"
+        x-transition:enter="transition ease-out duration-[2000ms] delay-100"
+        x-transition:enter-start="opacity-0 translate-y-12"
+        x-transition:enter-end="opacity-100 translate-y-0"
+      >
         A high-performing exchange matching engine is critical to the success of
         any cryptocurrency exchange.<br class="max-sm:hidden" />The speed,
         reliability, and scalability of the matching engine are directly linked
