--- a/layouts/partials/services.html
+++ b/layouts/partials/services.html
@@ -131,12 +131,12 @@
 
   <!-- Introduction Section -->
   <div
-    class="w-full grid grid-cols-2 max-sm:flex bg-white text-black text-left py-20 max-sm:py-10"
+    class="w-full grid grid-cols-3 max-sm:flex bg-white text-black text-left py-20 max-sm:py-10"
     x-data="{ shown: false }"
     x-intersect="shown = true"
   >
     <div
-      class="w-auto md:w-3/4 max-sm:w-11/12 mx-auto"
+      class="w-auto md:w-3/4 max-sm:w-11/12 col-span-2 mx-auto"
       x-show="shown"
       x-transition:enter="transition ease-out duration-1000 delay-50"
       x-transition:enter-start="opacity-0 translate-y-12"
@@ -192,7 +192,7 @@
       >
         <img
           src="/images/imac-binance.png"
-          class="object-contain justify-center h-[600px] w-auto ml-80"
+          class="object-contain justify-center h-[600px] ml-80"
         />
       </div>
     </div>
@@ -326,7 +326,7 @@
 
       <!-- Dynamic Items List (Column 1) -->
       <div
-        class="py-10 col-span-2"
+        class="py-10 px-20 col-span-2"
         x-data="{
         items: [
           'A high-frequency message bus providing a fast and reliable information highway',
@@ -346,7 +346,7 @@
             @mouseleave="open = false"
             class="flex flex-row justify-start items-start group max-sm:px-8 max-sm:pb-2"
           >
-            <!-- Dropdown Toggle Button -->
+            <!-- Dropdown Toggle Button
             <button
               @mouseover="open = true"
               class="flex items-center rounded-md hover:text-gray-400 pl-20 max-sm:pl-0"
@@ -358,7 +358,7 @@
                 X
               </span>
             </button>
-            <!-- Item Text -->
+             Item Text -->
             <span
               x-text="item"
               class="ml-4 group-hover:text-gray-400 transition duration-300"
